--- a/inspec.yml
+++ b/inspec.yml
@@ -1,7 +1,9 @@
-name: gcp
+name: inspec-gcp
 title: Google Cloud Platform Resource Pack
 maintainer: spaterson@chef.io,russell.seymour@turtlesystems.co.uk
 summary: This resource pack provides compliance resources_old_ignore for Google Cloud Platform
 copyright: spaterson@chef.io,russell.seymour@turtlesystems.co.uk
 copyright_email: spaterson@chef.io,russell.seymour@turtlesystems.co.uk
 version: 0.2.0
+supports:
+  - platform: gcp
