--- a/test/integration/verify/inspec.yml
+++ b/test/integration/verify/inspec.yml
@@ -1,5 +1,6 @@
 name: inspec-gcp-integration-tests
 version: 0.2.0
+inspec_version: '>= 2.1.78'
 depends:
   - name: inspec-gcp
     path: ../../../
