--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -26,16 +26,12 @@ MethodLength:
   Max: 40
 NumericLiterals:
   MinDigits: 10
-Metrics/CyclomaticComplexity:
-  Max: 10
-Metrics/PerceivedComplexity:
-  Max: 11
 Metrics/AbcSize:
-  Max: 55
+  Enabled: false
 Metrics/CyclomaticComplexity:
-  Max: 15
+  Enabled: false
 Metrics/PerceivedComplexity:
-  Max: 15
+  Enabled: false
 Style/PercentLiteralDelimiters:
   PreferredDelimiters:
     '%':  '{}'
