Start upgrade tf, blocked by mig modules
Signed-off-by: Sam Levenick <slevenick@google.com>

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ local
 .terraform
 *.idea*
 *.env
-*inspec-gcp.tfvars
+*inspec-gcp.tfvars.json
 *gcp-inspec-attributes.yaml
 inspec-cassettes
 *terraform.tfvars
