--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -59,7 +59,8 @@ Style/AndOr:
 Style/Not:
   Enabled: false
 Naming/FileName:
-  Enabled: false
+  Enabled: true
+  Regex: !ruby/regexp '/^.{3,100}$/'
 Style/TrailingCommaInArrayLiteral:
   EnforcedStyleForMultiline: comma
 Style/TrailingCommaInHashLiteral:
