Update expeditor configuration to allow bumping major version.
Signed-off-by: Stuart Paterson <spaterson@chef.io>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -13,6 +13,9 @@ github:
  delete_branch_on_merge: true
  minor_bump_labels:
   - "Version: Bump Minor"
+ major_bump_labels:
+  - "Version: Bump Major"
+
  version_tag_format: v{{version}}
  release_branch:
   - master
