--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -16,3 +16,19 @@ steps:
     executor:
       docker:
         image: ruby:2.6-stretch
+
+- label: run-tests-ruby-2.7
+  command:
+    - /workdir/.expeditor/buildkite/verify.sh
+  expeditor:
+    executor:
+      docker:
+        image: ruby:2.7
+
+- label: run-tests-ruby-3.0
+  command:
+    - /workdir/.expeditor/buildkite/verify.sh
+  expeditor:
+    executor:
+      docker:
+        image: ruby:3.0
