--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -1,6 +1,14 @@
 ---
 steps:
 
+- label: lint-ruby-2.6
+  command:
+    - RAKE_TASK=lint /workdir/.expeditor/buildkite/verify.sh
+  expeditor:
+    executor:
+      docker:
+        image: ruby:2.6-stretch
+
 - label: run-tests-ruby-2.5
   command:
     - /workdir/.expeditor/buildkite/verify.sh
