--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -17,7 +17,7 @@ steps:
 
 - label: run-tests-ruby-2.5
   command:
-    - /workdir/.expeditor/buildkite/verify.sh
+    - RAKE_TASK=default /workdir/.expeditor/buildkite/verify.sh
   expeditor:
     executor:
       docker:
@@ -25,7 +25,7 @@ steps:
 
 - label: run-tests-ruby-2.6
   command:
-    - /workdir/.expeditor/buildkite/verify.sh
+    - RAKE_TASK=default /workdir/.expeditor/buildkite/verify.sh
   expeditor:
     executor:
       docker:
@@ -33,7 +33,7 @@ steps:
 
 - label: run-tests-ruby-2.7
   command:
-    - /workdir/.expeditor/buildkite/verify.sh
+    - RAKE_TASK=default /workdir/.expeditor/buildkite/verify.sh
   expeditor:
     executor:
       docker:
@@ -41,7 +41,7 @@ steps:
 
 - label: run-tests-ruby-3.0
   command:
-    - /workdir/.expeditor/buildkite/verify.sh
+    - RAKE_TASK=default /workdir/.expeditor/buildkite/verify.sh
   expeditor:
     executor:
       docker:
