--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ cache: bundler
 rvm:
   - 2.4.3
 
-bundler_args: --without integration
-script: bundle exec rake
+  script:
+    - bundle config set --local without integration
+    - bundle exec rake
