--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -79,3 +79,5 @@ Style/IfUnlessModifier:
   Enabled: false
 Style/RescueStandardError:
   Enabled: false
+Style/OptionalBooleanParameter:
+  Enabled: false
