--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -85,3 +85,7 @@ Lint/MissingSuper:
   Enabled: false
 Metrics/MethodLength:
   Enabled: false
+Style/AccessorGrouping:
+  Enabled: false
+Style/GlobalStdStream:
+  Enabled: false
