--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -447,3 +447,9 @@ security_policy:
 
 memcache_instance:
   name: mem-instance
+
+accelerator_type:
+  name: accelerator_id
+
+disk_type:
+  name: disk_type_name
