adding resources f/imageFamilyViews

--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -468,3 +468,9 @@ image_family_views:
   archive_size_bytes: 539099200
   disk_size_gb: 3
   family: test
+
+license_code:
+  name: akl-zone1-1353
+
+public_delegated_prefix:
+  name: test
