--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -448,9 +448,6 @@ security_policy:
 memcache_instance:
   name: mem-instance
 
-license_code:
-  name: code_name
-
 accelerator_type:
   name: accelerator_id
 
@@ -463,9 +460,37 @@ interconnect_location:
   facility_provider_facility_id: 'Auckland - Albany'
   facility_provider: Vocus
 
-disk_type:
-  name: disk_type_name
+image_family_views:
+  zone: us-central1-c
+  name: image-1
+  source_type: RAW
+  status: READY
+  archive_size_bytes: 539099200
+  disk_size_gb: 3
+  family: test
 
-container_engine_versions:
-  valid_master_version: '1.21.5-gke.1802'
-  valid_node_version: '1.21.5-gke.1802'
+license_code:
+  name: akl-zone1-1353
+
+region_instance_group:
+  name: instance-group-2
+  region: us-central1
+  size: 1
+  named_port_name: 'port'
+  named_port_port: 80
+
+region_operation:
+  name: operation-1641188435323-5d4a6f5b26934-9281422c-dce238f5
+  region: us-central1
+  operation_type: "compute.instanceGroupManagers.insert"
+  status: DONE
+  progress: 100
+
+sql_connect:
+  region: us-central1
+  database_version: POSTGRES_13
+  backend_type: SECOND_GEN
+  cert_serial_number: 0
+  common_name: "Test-10001"
+  sha1_fingerprint: "80c5c611c0a591db967c7dda3467e23127288fed"
+  instance: test-pg
