--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -490,25 +490,6 @@ sql_database_flag:
   allowed_string_values: ON
   requires_restart: true
 
-image_family_views:
-  zone: us-central1-c
-  name: image-1
-  source_type: RAW
-  status: READY
-  archive_size_bytes: 539099200
-  disk_size_gb: 3
-  family: test
-
-license_code:
-  name: akl-zone1-1353
-
-region_instance_group:
-  name: instance-group-2
-  region: us-central1
-  size: 1
-  named_port_name: 'port'
-  named_port_port: 80
-
 region_operation:
   name: operation-1641188435323-5d4a6f5b26934-9281422c-dce238f5
   region: us-central1
@@ -534,3 +515,8 @@ zone_operation:
 
 public_delegated_prefix:
   name: test
+
+sql_operation:
+  name: e5c522f1-8391-4830-a8ff-ff1cc4a7b2a5
+  status: DONE
+  progress: 100
