--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -29,3 +29,11 @@ steps:
     executor:
       docker:
         image: ruby:3.0
+
+- label: validate licenses
+  command:
+    - license_scout
+  expeditor:
+    executor:
+      docker:
+        image: ruby:3.0
