Region Health Check resource + docs + test + teraform config
Signed-off-by: sa-progress <samir.anand@progress.com>

--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -55,6 +55,13 @@ health_check:
   check_interval_sec: 10
   tcp_health_check_port: 80
 
+region_health_check:
+  name: inspec-gcp-region-health-check
+  region: us-central1
+  timeout_sec: 10
+  check_interval_sec: 10
+  tcp_health_check_port: 80
+
 backend_service:
   name: inspec-gcp-backend-service
   description: A description
