State added in Cloud Scheduler files generated from MM
Signed-off-by: Samir Anand <sam.sunny001@gmail.com>

--- a/generate/generate-profile/inspec.yml
+++ b/generate/generate-profile/inspec.yml
@@ -12,7 +12,7 @@ attributes:
   description: 'The GCP project identifier.'
   type: string
 depends:
-- name: inspec-gcp-generate
+- name: inspec-gcp
   path: ../
 supports:
 - platform: gcp
