--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -5,7 +5,7 @@ ssl_policy:
   custom_feature: 'TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384'
   custom_feature2: 'TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384'
 
-topic: 
+topic:
   name: 'inspec-gcp-topic'
 
 subscription:
@@ -239,7 +239,7 @@ standardappversion:
   runtime: nodejs10
   entrypoint: "node ./app.js"
   port: "8080"
-  
+
 ml_model:
   name: ml_model
   region: us-central1
@@ -345,7 +345,7 @@ spannerinstance:
 spannerdatabase:
   name: spdatabase
   instance: spinstance
-  ddl: "CREATE TABLE test (test STRING(MAX),) PRIMARY KEY (test)" 
+  ddl: "CREATE TABLE test (test STRING(MAX),) PRIMARY KEY (test)"
 
 scheduler_job:
   # region must match where the apengine instance is deployed
@@ -444,7 +444,7 @@ logging_metric:
 compute_image:
   name: inspec-image
   source: https://storage.googleapis.com/bosh-gce-raw-stemcells/bosh-stemcell-97.98-google-kvm-ubuntu-xenial-go_agent-raw-1557960142.tar.gz
- 
+
 security_policy:
   name: sec-policy
   action: deny(403)
@@ -548,3 +548,7 @@ dlp:
   job_trigger_description: "description"
   description: "Description"
   display_name: "Displayname"
+  deidentify_templates:
+    name: "dlp-template-inspec"
+    location: "europe-west2"
+    type: "Infotype"
