Added GlobalNetworkEndpointGroup Resource
Signed-off-by: balasubramanian-s <balasubramanian.s@progress.com>

--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -313,6 +313,11 @@ network_endpoint_group:
   name: inspec-gcp-endpoint-group
   default_port: 90
 
+global_network_endpoint_group:
+  name: inspec-gcp-global-endpoint-group
+  network_endpoint_type: INTERNET_IP_PORT
+  default_port: 90
+
 node_template:
   name: inspec-node-template
   label_key: key
