Updates terraform scripts
Signed-off-by: Vasu1105 <vasundhara.jagdale@progress.com>

--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -562,3 +562,7 @@ cloud_composer_v1:
   name : "example-composer-env"
   region : "us-central1"
   image_version : "composer-1.20.12-airflow-2.4.3"
+
+organization_envgroup_attachment:
+  envgroup_id: "organizations/ppradhan/envgroups/test-env-group"
+  environment: "test-env"
