iac: add terraform script for google_composer_v1_environment resource
Signed-off-by: Sonu Saha <sonu.saha@progress.com>

--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -557,3 +557,8 @@ dlp:
     name: "dlp-template-inspec"
     location: "europe-west2"
     type: "Infotype"
+
+cloud_composer_v1:
+  name : "example-composer-env"
+  region : "us-central1"
+  image_version : "composer-1.20.12-airflow-2.4.3"
