--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -562,3 +562,28 @@ cloud_composer_v1:
   name : "example-composer-env"
   region : "us-central1"
   image_version : "composer-1.20.12-airflow-2.4.3"
+
+compute_service_attachment_conf:
+  compute_service_attachment_name: "my-psc-ilb"
+  description: "my-psc-ilb is a private service connection for the internal load balancer"
+  region: "us-central1"
+  enable_proxy_protocol: true
+  connection_preference: "ACCEPT_AUTOMATIC"
+  psc_ilb_consumer_address_name: "my-psc-ilb-consumer-address"
+  subnetwork_id: "default"
+  address_type: "INTERNAL"
+  psc_ilb_consumer_name: "my-psc-ilb-consumer-forwarding-rule"
+  network_id: "default"
+  psc_ilb_target_service_name: "producer-forwarding-rule"
+  load_balancing_scheme: "INTERNAL"
+  all_ports: true
+  producer_service_backend_name: "producer-backend-service"
+  producer_service_health_check_name: "producer-health-check"
+  producer_service_health_check_port: "80"
+  psc_ilb_network_name: "psc-ilb-network"
+  auto_create_subnetworks: false
+  psc_ilb_producer_subnetwork_name: "psc-ilb-producer-subnetwork"
+  subnetwork_ip_cidr_range: "10.0.0.0/16"
+  psc_ilb_nat_name: "psc-ilb-nat"
+  purpose: "PRIVATE_SERVICE_CONNECT"
+  nat_ip_cidr_range: "10.1.0.0/16"
