--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -557,3 +557,17 @@ dlp:
     name: "dlp-template-inspec"
     location: "europe-west2"
     type: "Infotype"
+
+vpn_gateway:
+  project : "ppradhan"
+  region : "us-central1"
+  vpn_gateway : "4406948336461056012"
+  kind : "value_kind"
+  id : "value_id"
+  creation_timestamp : "value_creationtimestamp"
+  name : "inspec-vpn-gateway"
+  description : "Inspec Test HA VPN Gateway"
+  network : "gcp-inspec-network"
+  self_link : "value_selflink"
+  label_fingerprint : "value_labelfingerprint"
+  stack_type : "IPV4_ONLY"
