--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -621,3 +621,9 @@ vpn_gateway:
   self_link : "value_selflink"
   label_fingerprint : "value_labelfingerprint"
   stack_type : "IPV4_ONLY"
+
+region_network_endpoint_group:
+  name: "inspec"
+  region: "us-central1"
+  network_endpoint_type: "PRIVATE_SERVICE_CONNECT"
+  target_service: "us-central1-logging.googleapis.com"
