Test cases added.
Signed-off-by: Samir <85890442+sa-progress@users.noreply.github.com>

--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -627,3 +627,4 @@ organization_api_revision:
   parent: "organizations/ppradhan/apis/helloworld"
   content_type: "Application"
   revision: 1
+  api: "helloworld"
