iac: add tf configuration for secrets manager
Signed-off-by: Sonu Saha <sonu.saha@progress.com>

--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -621,3 +621,6 @@ vpn_gateway:
   self_link : "value_selflink"
   label_fingerprint : "value_labelfingerprint"
   stack_type : "IPV4_ONLY"
+
+secrets_manager_v1:
+  secret_id: "inspec-gcp-secret"
