--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -632,3 +632,8 @@ apigee_organization_apis:
   name : "firstproxy",
   parent : "organizations/ppradhan",
   api_proxy_type : "PROGRAMMABLE"
+
+crypto_key_version:
+  key_ring: "gcp-inspec-kms-key-ring"
+  crypto_key: "gcp-inspec-kms-crypto-key-policy"
+  region: "us-central-1"
