update attributes & add terraform scripts
Signed-off-by: balasubramanian-s <balasubramanian.s@progress.com>

--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -640,3 +640,7 @@ crypto_key_version:
   key_ring: "gcp-inspec-kms-key-ring"
   crypto_key: "gcp-inspec-kms-crypto-key-policy"
   region: "us-central-1"
+
+compute_machine_images:
+  name: "image-1"
+  instance: "inspec-test-instance"
