--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -654,3 +654,8 @@ network_attachments:
   name: "inspec-test"
   region: "us-central1"
   network: "inspec-network"
+
+compute_region_url_map:
+  region: us-central1
+  name: example-regionurlmap
+  description: a description
