iac: add tf config for compute_region_ssl_policy
Signed-off-by: Sonu Saha <sonu.saha@progress.com>

--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -698,3 +698,8 @@ compute_packet_mirroring:
   name: inspec-mirroring
   region: "us-central1"
   network: "inspec-network"
+
+compute_region_ssl_policy:
+  name: "basic-ssl-policy"
+  profile: "MODERN"
+  region: "us-central1"
