iac: add tf config for compute_region_commitment
Signed-off-by: Sonu Saha <sonu.saha@progress.com>

--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -659,3 +659,7 @@ compute_packet_mirroring:
   name: inspec-mirroring
   region: "us-central1"
   network: "inspec-network"
+
+compute_region_commitment:
+  name: "my-region-commitment"
+  plan: "THIRTY_SIX_MONTH"
