add tf scripts & update testcases
Signed-off-by: balasubramanian-s <balasubramanian.s@progress.com>

--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -720,3 +720,10 @@ bigtable_instance_cluster:
   name: "inspec-test"
   cluster: "inspec-test-c1"
   storage_type: "SSD"
+
+dataproc_metastore_service:
+  name: "metastore-srv"
+  location: "us-central1"
+  port: 9080
+  tier: "DEVELOPER"
+  hive_config_version: "2.3.6"
