--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -724,6 +724,10 @@ bigtable_instance_cluster:
 dataproc_metastore_service:
   name: "metastore-srv"
   location: "us-central1"
-  port: 9080
   tier: "DEVELOPER"
-  hive_config_version: "2.3.6"
+  version: "3.1.2"
+  metastore_type: "DATAPROC_METASTORE"
+
+dataproc_metastore_federation:
+  federation_id: "inspec-federation"
+  location: "us-central1"
