Updated test cases and added terraform scripts
Signed-off-by: balasubramanian-s <balasubramanian.s@progress.com>

--- a/test/integration/configuration/mm-attributes.yml
+++ b/test/integration/configuration/mm-attributes.yml
@@ -731,3 +731,12 @@ dataproc_metastore_service:
 dataproc_metastore_federation:
   federation_id: "inspec-federation"
   location: "us-central1"
+
+apigee_instance_attachment:
+  name : "inspec-test-instance-attachment"
+  location: "us-central"
+  instance : "inspec-test-instance"
+  environment: "inspec-test-environment"
+  description: "InSpec Apigee Instances"
+  parent : "organizations/ppradhan"
+  api_proxy_type : "PROGRAMMABLE"
