--- a/inspec.yml
+++ b/inspec.yml
@@ -2,8 +2,10 @@ name: inspec-gcp
 title: Google Cloud Platform Resource Pack
 maintainer: spaterson@chef.io,russell.seymour@turtlesystems.co.uk
 summary: This resource pack provides compliance resources_old_ignore for Google Cloud Platform
-copyright: spaterson@chef.io,russell.seymour@turtlesystems.co.uk
-copyright_email: spaterson@chef.io,russell.seymour@turtlesystems.co.uk
+copyright: spaterson@chef.io
+copyright_email: spaterson@chef.io
+copyright: russell.seymour@turtlesystems.co.uk
+copyright_email: russell.seymour@turtlesystems.co.uk
 version: 1.11.136
 license: Apache-2.0
 inspec_version: '>= 4.7.3' 
