--- a/inspec.yml
+++ b/inspec.yml
@@ -2,10 +2,8 @@ name: inspec-gcp
 title: Google Cloud Platform Resource Pack
 maintainer: spaterson@chef.io,russell.seymour@turtlesystems.co.uk
 summary: This resource pack provides compliance resources_old_ignore for Google Cloud Platform
-copyright: spaterson@chef.io
-copyright_email: spaterson@chef.io
-copyright: russell.seymour@turtlesystems.co.uk
-copyright_email: russell.seymour@turtlesystems.co.uk
+copyright: Copyright (c) 2018-2024 Progress Software Corporation and/or its subsidiaries or affiliates. All Rights Reserved.
+copyright_email: spaterson@chef.io,russell.seymour@turtlesystems.co.uk
 version: 1.11.136
 license: Apache-2.0
 inspec_version: '>= 4.7.3' 
